--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "phonedirectory",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://singhshubham98.github.io",
+  "homepage": "https://Ayush1998.github.io",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "firebase": "^5.8.6",
@@ -20,7 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
+    "predeploy": "yarn run build",
     "deploy": "gh-pages -d build -b master"
   },
   "eslintConfig": {
